--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "recharts": "2.15.0",
     "resend": "^4.2.0",
     "sonner": "^1.7.1",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.5.1",
